<resources>
    <string name="app_name">Number Match</string>
    <string name="pause">Pause</string>
    <string name="options">Settings</string>
    <string name="get_maze_box">Get feature box</string>
    <string name="feedback">Contact</string>
    <string name="about">About</string>
    <string name="how_to_play">How to Play</string>
    <string name="more_apps_frm_gujmcq">More apps from GujMCQ</string>
    <string name="join_us_on_twitter">Join us on Twitter</string>
    <string name="update_app">Update This Game</string>
    <string name="statistics">Statistics</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_app">GetApp</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="home">Home</string>
    <string name="daily">Daily Challenge</string>
    <string name="our_apps">Our Apps</string>
    <string name="resume_game">Resume</string>
    <string name="restart_game">Restart</string>
    <string name="achievements">Achievements</string>
    <string name="app_settings">Settings</string>

    <string name="show_score">Show score</string>
    <string name="show_time">Show time</string>
    <string name="game_sound">Audio effects</string>
    <string name="game_vibration">Vibration</string>
    <string name="new_game">New Game</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="sound_on">ON</string>
    <string name="sound_off">OFF</string>

    <string name="daily_challenge_popup_body_message">First, complete the previous sessions of daily challenges.</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>

</resources>