<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:tooltipText="@string/home"
        android:orderInCategory="1" />

    <item
        android:id="@+id/nav_daily"
        android:icon="@drawable/ic_today"
        android:title="@string/daily"
        android:tooltipText="@string/daily"
        android:orderInCategory="2" />

    <item
        android:id="@+id/nav_our_apps"
        android:icon="@drawable/ic_application"
        android:title="@string/our_apps"
        android:tooltipText="@string/our_apps"
        android:orderInCategory="3" />

</menu>