<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:background="@color/default_app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/default_app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/default_app_bar_text"
            app:title="@string/app_settings"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:navigationIconTint="@color/default_app_bar_icon_tint"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_score"
            android:text="@string/show_score"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_switch_text"
            android:textSize="@dimen/options_menu_text_size"/>

        <TextView
            android:layout_marginBottom="@dimen/standard_space"
            android:id="@+id/score_switch_help_tv"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="@dimen/standard_space"
            android:text="Score will be calculated, even if it is not visible."
            android:gravity="start"
            android:textColor="@color/default_switch_suggestion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_time"
            android:text="@string/show_time"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_switch_text"
            android:textSize="@dimen/options_menu_text_size"/>

        <TextView
            android:id="@+id/time_switch_help_tv"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/standard_space"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="@dimen/standard_space"
            android:text="Time will be recorded, even if it is not visible."
            android:gravity="start"
            android:textColor="@color/default_switch_suggestion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/game_sound"
            android:text="@string/game_sound"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_switch_text"
            android:textSize="@dimen/options_menu_text_size"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/game_vibration"
            android:text="@string/game_vibration"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_switch_text"
            android:textSize="@dimen/options_menu_text_size"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/m_div_1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mute_ads_sound"
            android:text="Mute Ads"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_switch_text"
            android:textSize="@dimen/options_menu_text_size"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>