<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_app_bg"
    tools:context=".OptionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/default_app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/default_app_bar_text"
            app:title="@string/options"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:navigationIconTint="@color/default_app_bar_icon_tint"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:visibility="gone"
                        android:id="@+id/divider_view_1"
                        android:background="@color/default_normal_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/achievements_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/achievements_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_medal"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/achievements"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/stats_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/stats_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_high_bars"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/statistics"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:id="@+id/divider_view_2"
                        android:background="@color/default_normal_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/settings_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/settings_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_setting"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/options"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/feedback_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/feedback_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_contact"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/feedback"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/about_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/about_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_info"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/about"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/howtoplay_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/howtoplay_tv"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_read_book"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/how_to_play"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:id="@+id/divider_view_3"
                        android:background="@color/default_normal_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ourapps_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/more_apps_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_application"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/more_apps_frm_gujmcq"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/twitter_contact_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/twitter_contact_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_twitter"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/join_us_on_twitter"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/update_app_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/update_app_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:drawablePadding="@dimen/standard_space"
                            android:drawableStart="@drawable/ic_update"
                            android:textColor="@color/default_options_menu_text"
                            android:text="@string/update_app"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:id="@+id/divider_view_4"
                        android:background="@color/default_normal_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/share_game_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/share_game_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawableEnd="@drawable/ic_share"
                            android:drawablePadding="@dimen/standard_space"
                            android:textColor="@color/default_options_menu_text"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:text="Share This Game"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/privacy_policy_cv"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/privacy_policy_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/standard_space"
                            android:drawableEnd="@drawable/ic_external_open"
                            android:drawablePadding="@dimen/standard_space"
                            android:textColor="@color/default_options_menu_text"
                            android:drawableTint="@color/default_app_bar_icon_tint"
                            android:text="@string/privacy_policy"
                            android:textSize="@dimen/options_menu_text_size" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>